--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -15,9 +15,9 @@
     <div class="weather_details card">
       <ul class="list-group">
         <li class="list-group-item active"><strong>Temperature Details:</strong></li>
-        <li class="list-group-item">Temperature: {{weatherAndLocation?.temp}} K</li>
-        <li class="list-group-item">Min Temperature: {{weatherAndLocation?.temp_min}} K</li>
-        <li class="list-group-item">Max Temperature: {{weatherAndLocation?.temp_max}} K</li>
+        <li class="list-group-item">Temperature: {{weatherAndLocation?.temp}} °C</li>
+        <li class="list-group-item">Min Temperature: {{weatherAndLocation?.temp_min}} °C</li>
+        <li class="list-group-item">Max Temperature: {{weatherAndLocation?.temp_max}} °C</li>
         <li class="list-group-item">Cloud Cover: {{weatherAndLocation?.clouds}}%</li>
         <li class="list-group-item"> Sunrise: {{ weatherAndLocation?.sunrise}}</li>
         <li class="list-group-item">Sunset: {{weatherAndLocation?.sunset}}</li>
